version/0.38/_sources/api/solver/_autosummary/settings/register_based.rst.txt
:orphan:

.. _register_based:

register_based
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_261.register_based
    :show-inheritance:

.. rubric:: Methods

==============================================   ======================================================================

Method                                                                                                          Summary

==============================================   ======================================================================
:ref:`create <create>`                                                Create a new instance of the current object type.

:ref:`delete <delete>`                                                                         Delete selected objects.

:ref:`rename <rename>`                                                                               Rename the object.

:ref:`list_1 <list_1_2>`                                      List the names of the definitions for poor mesh numerics.

:ref:`list_properties_1 <list_properties_1_1>`              List the properties of a definition for poor mesh numerics.

:ref:`make_a_copy <make_a_copy>`                                                           Create a copy of the object.

:ref:`set <set_1>`                                   Applies numerical diagnostic settings to a specific cell register.

==============================================   ======================================================================

.. rubric:: Named object type

:ref:`register_based_child <register_based_child>`


.. rubric:: Included in:

==================================================   =======================================================================================

Parent                                                                                                                               Summary

==================================================   =======================================================================================
:ref:`poor_mesh_numerics_2 <poor_mesh_numerics_2>`       Provides tools to monitor and address numerical issues caused by poor mesh quality.

==================================================   =======================================================================================

